--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --header-height: 3.5rem;
     --first-color:hsl(0, 100%, 45%);
     --white-color:hsl(0,0%,100%);
-    --black-color:hsl(222,100%,2%);
+    --black-color:hsl(0, 0%, 0%);
     --radial-color:radial-gradient(52% 52% at 50% 50%,
                     hsl(202, 90%, 38%) 0%,
                     hsl(222, 100%, 6%)100%);
